---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            if (foo) {bar}\n            if (foo) {bar} else {baz}\n            if (foo) bar else {baz}\n            if (\n            foo) {bar}\n            if (\n            foo) {bar}\n            if (foo)\n                {bar}\n        \"#\n}).unwrap()"
---
if (foo) { bar }
if (foo) { bar } else { baz }
if (foo) bar else { baz }
if (foo) {
  bar
}
if (foo) {
  bar
}
if (foo) {
  bar
}
